--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,4 +32,21 @@ header, footer {
 
 main {
     min-height: var(--alturaMain);
+    display: flex;
+    align-items: center;
+}
+
+main .container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.grafico {
+    width: 40%;
+    background-color: #ffffff;
+    text-align: center;
+    color: #000000;
+    padding: 16px;
+    border-radius: 2px;
 }
